# Rewindify

./: .gitignore  README.md  docker-compose.yaml  roadmap.txt
apps/rewindify-web-app/: README.md  angular.json  package-lock.json  package.json
apps/rewindify-web-app/src/: index.html
apps/rewindify-web-app/src/app/: app.spec.ts  app.ts
apps/rewindify_flutter_app/: README.md  pubspec.yaml
apps/rewindify_flutter_app/android/app/: build.gradle.kts
apps/rewindify_flutter_app/android/app/src/main/: AndroidManifest.xml
apps/rewindify_flutter_app/android/app/src/main/kotlin/com/example/rewindify_clients/: MainActivity.kt
apps/rewindify_flutter_app/ios/Runner/: Info.plist
apps/rewindify_flutter_app/ios/Runner.xcodeproj/: project.pbxproj
apps/rewindify_flutter_app/linux/: CMakeLists.txt
apps/rewindify_flutter_app/linux/runner/: my_application.cc
apps/rewindify_flutter_app/macos/Runner.xcodeproj/: project.pbxproj
apps/rewindify_flutter_app/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
apps/rewindify_flutter_app/macos/Runner/Configs/: AppInfo.xcconfig
apps/rewindify_flutter_app/test/: widget_test.dart
apps/rewindify_flutter_app/web/: index.html  manifest.json
apps/rewindify_flutter_app/windows/: CMakeLists.txt
apps/rewindify_flutter_app/windows/runner/: Runner.rc  main.cpp
services/: pyproject.toml
services/rewindify-api/: main.py  pyproject.toml
services/rewindify-api/api/clients/: client.py
services/rewindify-api/api/db/: clickhouse-client.py
services/rewindify-api/api/services/: account_service.py
services/rewindify-api/api/v1/: __init__.py  app.py  pyproject.toml
services/rewindify-api/api/v1/routes/: account_management.py
services/rewindify-api/src/rewindify_api/: __init__.py  main.py
system-design/: .$jp-system-design-proprosal.drawio.bkp  .$jp-system-design-proprosal.drawio.dtmp  jp-system-design-proprosal.drawio
