[project]
name = "services"
version = "0.1.0"
description = "All backend functionality for Rewindify!"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.128.0",
    "firebase-admin>=7.1.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "stripe>=14.2.0",
    "ty>=0.0.12",
    "uuid-v7>=1.0.0",
]

[tool.uv.workspace]
members = [
    "packages/shared-models",
 "packages/shared-db",
 "rewindify-api",
]

[tool.ruff.lint]
select = ["ALL"]

[dependency-groups]
dev = [
    "ruff>=0.14.13",
]
