[project]
name = "rewindify-api"
version = "0.1.0"
description = "a REST API for rewindify."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "shared-models",
    "shared-db",
]

[tool.uv.sources]
shared-models = { workspace = true }
shared-db = { workspace = true }

[dependency-groups]
dev = [
    "ruff>=0.14.10",
    "ty>=0.0.8",
]

[build-system]
requires = ["uv_build>=0.8.19,<0.9.0"]
build-backend = "uv_build"

[tool.ruff.lint]
select = ["ALL"]

[tool.ty.environment]
root = ["./src/rewindify_api"]
