[project]
name = "rewindify-api"
version = "0.1.0"
description = "a REST API for rewindify."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "ruff>=0.14.10",
    "ty>=0.0.8",
]

[tool.ruff.lint]
select = ["ALL"]

[tool.ty.environment]
root = ["./v1"]